--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html>
-<head>
-  <title>HUGE NavExercise</title>
-  <link rel="stylesheet" href="/styles/main.css">
-</head>
-<body>
-<h1>Hello.</h1>
-</body>
+  <head>
+    <title>HUGE NavExercise</title>
+    <link rel="stylesheet" type="text/css" href="styles/cssreset-min.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <script src="scripts/react-with-addons-0.12.2.min.js"></script>
+    <script type="text/jsx" src="scripts/react-onclickoutside.js"></script>
+    <script src="scripts/JSXTransformer-0.12.2.js"></script>
+    <script src="scripts/jquery-1.10.0.min.js"></script>
+  </head>
+  <body>
+    <div id="react-container"></div>
+    <script type="text/jsx" src="scripts/app.js"></script>
+  </body>
 </html>
