Change react-container to body

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
     <script src="scripts/JSXTransformer-0.12.2.js"></script>
     <script src="scripts/jquery-1.10.0.min.js"></script>
   </head>
-  <body>
-    <div id="react-container"></div>
+  <body id="react-container">
     <script type="text/jsx" src="scripts/app.js"></script>
   </body>
 </html>
